--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=close" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -14,7 +15,9 @@
         <div class="container">
             <div class="logo">AB</div>
             <div class="nav-links" id="navLinks">
-                <i class="fas fa-times close-menu" id="closeMenu"></i>
+                <span class="material-symbols-outlined custom-color" id="closeMenu">
+close
+</span>
                 <ul>
                     <li><a href="#home" >Home </a></li>
                     <li><a href="#about">About Me</a></li>
